--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/yam-and-egg-sauce.html">Yam and Egg Sauce Recipe</a>
+        <a href="recipes/yam-and-egg-sauce.html" target="_blank" rel="noopener noreferrer">Yam and Egg Sauce Recipe</a>
+        <a href="recipes/spaghetti-and-meatballs.html" target="_blank" rel="noopener noreferrer">Spaghetti and Meatballs</a>
 
 
     </body>
