--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Odin Recipes</h1>
         <a href="recipes/yam-and-egg-sauce.html" target="_blank" rel="noopener noreferrer">Yam and Egg Sauce Recipe</a>
         <a href="recipes/spaghetti-and-meatballs.html" target="_blank" rel="noopener noreferrer">Spaghetti and Meatballs</a>
-
+        <a href="recipes/smokey-party-jollof-rice.html" target="_blank" rel="noopener noreferrer">Smokey-party-jollof-rice</a>
 
     </body>
 </html>
