--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/yam-and-egg-sauce.html" target="_blank" rel="noopener noreferrer">Yam and Egg Sauce Recipe</a>
-        <a href="recipes/spaghetti-and-meatballs.html" target="_blank" rel="noopener noreferrer">Spaghetti and Meatballs</a>
-        <a href="recipes/smokey-party-jollof-rice.html" target="_blank" rel="noopener noreferrer">Smokey-party-jollof-rice</a>
+        <ul>
+            <li><a href="recipes/yam-and-egg-sauce.html" target="_blank" rel="noopener noreferrer">Yam and Egg Sauce Recipe</a></li>
+            <li><a href="recipes/spaghetti-and-meatballs.html" target="_blank" rel="noopener noreferrer">Spaghetti and Meatballs</a></li>
+            <li><a href="recipes/smokey-party-jollof-rice.html" target="_blank" rel="noopener noreferrer">Smokey-party-jollof-rice</a></li>
+
+        </ul>
+       
 
     </body>
 </html>
