feat: Add css styles to headings

--- a/recipes/smokey-party-jollof-rice.html
+++ b/recipes/smokey-party-jollof-rice.html
@@ -3,18 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <title>smokey-party-jollof-rice</title>
+        <link rel="stylesheet" href="style.css">
 
     </head>
 
     <body>
-        <h1>SMOKEY PARTY JOLLOF RICE</h1>
+        <h1 class="top-header">SMOKEY PARTY JOLLOF RICE</h1>
         <img src="https://img-global.cpcdn.com/recipes/f81e2ea71e25f3fc/1360x964cq70/smokey-party-jollof-rice-recipe-main-photo.webp"
         alt="a picture of a plate of smokey-party-jollof-rice" width="300" height="300">
-        <h2>How to prepare smokey party jollof rice</h2>
-        <h3>Description</h3>
+        <h2 class="subsection header">How to prepare smokey party jollof rice</h2>
+        <h3 class="subsection preview">Description</h3>
         <p>Smokey party jollof rice is not just of the normal party jollof rice. It has a smokey aroma that gives it a more savoury taste. 
             It is a Nigerian meal prepared and eaten in most Nigerian events and households. Some rate it as the best kind there is.</p>
-        <h3>Ingredients</h3>
+        <h3 class="recipe-ingredients">Ingredients</h3>
         <ul>
             <li>3 cups basmati rice</li>
             <li>Blended Pepper, tatashe, onions and tomato mix</li>
@@ -28,7 +29,7 @@
             <li>1 medium Diced onions
             <li>Diced cooked and fried cow liver (optional)</li>
         </ul>
-        <h3>Steps</h3>
+        <h3 class="recipe-steps">Steps</h3>
         <ol>
             <li>The best of non soggy jollof rice starts from the tomato mix. This should be boiled until completely dried but not burnt.
                 This takes away every sharp taste from the tomato and removes excess water that contributes to sogginess.</li>
