feat: Add color to some page contents
Made the steps font color red to improve page aesthetics. Made the
"let's make meatballs" in spaghetti recipe page dark blue.

--- a/recipes/spaghetti-and-meatballs.html
+++ b/recipes/spaghetti-and-meatballs.html
@@ -4,6 +4,13 @@
         <meta charset="UTF-8">
         <title>spaghetti-and-meatballs-recipe</title>
         <link rel="stylesheet" href="style.css">
+        <style>
+            p strong{
+                color:darkblue;
+                font-family: Brush 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', 
+                Geneva, Verdana, sans-serif;
+            }
+        </style>
     </head>
 
     <body>
